--- a/formulaire1.html
+++ b/formulaire1.html
@@ -19,7 +19,6 @@
            <input type="text" placeholder="Adresse.... " id="input3"> <br>
            <input type="tel" placeholder="Téléphone.... " id="input4"> <br>
            <input type="email" placeholder="E-mail.... " id="input5"> <br>
-           <input type="file" name="Photo" accept="image/jpeg" id="input6"> <br>
            <button type="submit" onclick="myFunction()">VALIDER</button>
                        
       </div>    
@@ -33,5 +32,5 @@
     </div>
    
 
-
+    <script src="java.js"></script>
 </body></html>
