--- a/affichage.html
+++ b/affichage.html
@@ -29,6 +29,7 @@
 
 <div class="but">
      <button type="button" class="btn" onclick="window.print()">imprimer</button>
+     <button class="btn" onclick="location.href = 'prototype.html'" >certificats</button>
     </div>
  
 </div>
