--- a/certif.html
+++ b/certif.html
@@ -24,7 +24,9 @@
                     <div class='reason'>
                         For deftly defying the laws of gravity<br/>and flying high
                     </div>
+                    <div>
+                        <img src="Stamp.svg" alt="" class="stamp">
+                    </div>
                 </div>
-            </body>
-          
+            </body> 
 </html>
