--- a/prototype.html
+++ b/prototype.html
@@ -16,6 +16,9 @@
          <div class="but"> 
              <button type="button" class="btn  " onclick="window.print()">print</button>
          </div>
+         <div>
+             <img src="Stamp.svg" alt="">
+         </div>
     </body>
 
 </html>
