--- a/certif.html
+++ b/certif.html
@@ -5,28 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="certificats.css">
+    <script src="certificat.js"></script>
     <title>Document</title>
 </head>
 <body>
-     <div class='container'>
-         <div class='logo'>
-             Solicode
-         </div>
-                 <div class='marquee'>
-                     Certificate of Completion
-                    </div>
-                    <div class='assignment'>
-                        This certificate is presented to
-                    </div>
-                    <div class='person'>
-                        Nom Prenom
-                    </div>
-                    <div class='reason'>
-                        For deftly defying the laws of gravity<br/>and flying high
-                    </div>
-                    <div>
-                        <img src="Stamp.svg" alt="" class="stamp">
-                    </div>
-                </div>
-            </body> 
+<p id="certif"></p>
 </html>
